# news-briefer

./: .env.prod  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
client/: Dockerfile  Dockerfile.dev  nginx.conf.template  package-lock.json  package.json
client/login-ui/: package-lock.json  package.json
client/login-ui/public/: index.html
client/login-ui/src/: App.js  Home.js  Login.css  Login.js
client/public/: index.html
client/src/: App.css  App.js  Feed.css  Feed.js  Home.css  Home.js  Login.css  Login.js  SignUp.css  SignUp.js  Sources.css  Sources.js  store.js  vars.js
db/: Dockerfile  README.md
db/setup_scripts/: db_setup.sql
llm/: Dockerfile  README.md  entrypoint.sh  llm_classes.py  llm_server.py  pyproject.toml
llm/src/: llm_classes.py  llm_server.py
server/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  summarized_output.txt
server/api_tests/: add source.bru  bruno.json  get audio.bru  get headers.bru  get sources.bru  get text.bru  login.bru  remove source.bru  signup.bru
server/src/: ai_test.py  goog_llm.py  goog_tts.py  llm.py  parse_rss.py  server.py  tts.py  tts_output.py
tts/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  tts-server.py
